Hello World with Cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,18 @@
+# Step 0 Create Source and CmakeFile
+# Step 1 Create folder name "build"
+# Step 2 Come inside build folder
+# Step 3 cmake ..       Generating the Build files / Configure the Project
+# Step 4 cmake --build .
+# Step 5 ./Executable_file_name
+
 # Set the minimum version of CMake that can be used
 cmake_minimum_required(VERSION 3.27)
 
-# set(CMAKE_CXX_COMPILER "C:/ProgramData/chocolatey/bin/g++.exe")
-# set(CMAKE_C_COMPILER "C:/ProgramData/chocolatey/bin/gcc.exe")
-
 # Set the project name
-project(Step3)
+project(Example_1
+        VERSION 1.0.0
+        LANGUAGES C CXX)
 
-# Add an executablem
-add_executable(Step3 main.cpp)
+# Add an executable
+add_executable(Example_1 main.cpp)
+
