--- a/src/sub_lib/CmakeLists.txt
+++ b/src/sub_lib/CmakeLists.txt
@@ -1,6 +1,6 @@
 
 # Add a library
-add_library(Library STATIC my_lib.cpp)
+add_library(${LIBRARY_NAME} STATIC my_lib.cpp)
 
 # inclue directory
-target_include_directories(Library PUBLIC "./")
+target_include_directories(${LIBRARY_NAME} PUBLIC "./")
