--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,3 @@
-# Step 0 Create Source and CmakeFile
-# Step 1 Create folder name "build"
-# Step 2 Come inside build folder
-# Step 3 cmake ..       Generating the Build files / Configure the Project
-# Step 4 cmake --build .
-# Step 5 ./Executable_file_name
 
 # Set the minimum version of CMake that can be used
 cmake_minimum_required(VERSION 3.27)
@@ -15,11 +9,11 @@ set(CMAKE_CXX_STANDARD          17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS        OFF)
 
-
 # Set variables name
 set(LIBRARY_NAME Library_file)
 set(EXECUTABLE_NAME Executable_file)
 
+add_subdirectory(configured)
 # Define src first because library define out library
 # And library is used in out application
 add_subdirectory(src)
