--- a/src/sub_lib/CmakeLists.txt
+++ b/src/sub_lib/CmakeLists.txt
@@ -3,4 +3,6 @@
 add_library(${LIBRARY_NAME} STATIC my_lib.cpp)
 
 # inclue directory
-target_include_directories(${LIBRARY_NAME} PUBLIC "./")
+target_include_directories(${LIBRARY_NAME} PUBLIC 
+                          "./"
+                          "${CMAKE_BINARY_DIR}/configured_files/include")
